# AdaKV

./: .gitignore  LICENSE  README.md  freeze_requirements.txt  makefile  pyproject.toml  setup.py
adaptive_snapkv/monkeypatch/: adaptive_llama_hijack.py  adaptive_mistral_hijack.py  fixed_llama_hijack.py  fixed_mistral_hijack.py  monkeypatch.py  slm_llama_hijack.py  slm_mistral_hijack.py  snapkv_utils.py
csrc/: build.py
csrc/csrc/: cuda_api.cu
docs/: README.md  index.html
docs/static/js/: index.js
experiments/LongBench/: A100_test_longbench.sh  A100_test_longbench_small_budget.sh  GQA_eval_longbench.sh  MIRACLE_test_small_budget_withoutNor.sh  README.md  convert_to_execl.py  eval.py  longbench_eval.py  pred.py  runall.sh  test_longbench.sh
experiments/LongBench/Log/mistral-7B-instruct-v0.2/: 2wikimqa.jsonl  gov_report.jsonl  hotpotqa.jsonl  lcc.jsonl  list_result.json  multi_news.jsonl  multifieldqa_en.jsonl  musique.jsonl  narrativeqa.jsonl  passage_count.jsonl  passage_retrieval_en.jsonl  qasper.jsonl  qmsum.jsonl  repobench-p.jsonl  result.json  samsum.jsonl  trec.jsonl  triviaqa.jsonl
experiments/LongBench/Log/mistral-7B-instruct-v0.2c1024_w32_k7_maxpool_floor0.5_adaptiveTrue/: 2wikimqa.jsonl  gov_report.jsonl  hotpotqa.jsonl  lcc.jsonl  multi_news.jsonl  multifieldqa_en.jsonl  musique.jsonl  narrativeqa.jsonl  passage_count.jsonl  passage_retrieval_en.jsonl  qasper.jsonl  qmsum.jsonl  repobench-p.jsonl  samsum.jsonl  (+2 more)
experiments/LongBench/config/: c128_w32_k7_maxpool.json  c2048_w32_k7_maxpool.json  c256_w32_k7_maxpool.json  c512_w32_k7_maxpool.json
(+271 files in other folders)
