[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "adakv"
version = "0.0.1"

dependencies = [
    "rouge",
    "tokenizers",
    "rouge_score",
    "numpy==1.26.0",
    "jieba==0.42.1",
    "datasets",
    "accelerate",
    "tqdm==4.66.1",
    "icetk==0.0.7",
    "transformers==4.44.2",
]

[tool.setuptools.packages.find]
where = ["."]
